# Company-Decision-Monitor

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  build.bat  pyproject.toml  requirements-desktop.txt  reset_user_data.bat  run_dev.bat
.github/: PULL_REQUEST_TEMPLATE.md
backend/: README.md
docs/: architecture.md  bundled_open_source_runtime.md  changelog.md  china_hk_data_provider.md  company_profile_enrichment.md  data_source_plan.md  external_sources.md  feature_list.md  free_api_network_mode.md  future_data_sources.md  generalized_search_performance.md  issue_labels.md  known_issues.md  manual_qa_checklist_v0.1.2.md  manual_qa_checklist_v0.1.3-company-data.md  manual_qa_checklist_v0.1.3.md  manual_qa_checklist_v0.1.4.md  manual_ui_qa_v0.1.3.md  open_source_data_mode.md  open_source_integration_candidates.md  post_release_feedback.md  product_requirements.md  provider_quality.md  release_notes.md  release_validation.md  search_performance.md  search_quality.md  ui_design_system.md  ui_migration_v0.1.3.md  ui_reference.md  ui_structure.md  web_evidence_crawling.md
installer/: CompanyDecisionMonitor.iss
public/: README.md
pyinstaller_hooks/: hook-sqlalchemy.py
reports/: README.md
scripts/: benchmark_search.py  benchmark_unseen_search.py  build_app.py  build_china_hk_symbol_index.py  build_symbol_universe.py  build_windows.py  capture_ui_screenshots.py  check_search_query_plans.py  clean_build.py  clean_preview_artifacts.py  diagnose_company_profile.py  diagnose_search.py  evaluate_profile_coverage.py  evaluate_search_quality.py  hash_release_artifacts.py  package_portable.py  reset_cache.py  reset_user_data.ps1  search_quality_lib.py  smoke_akshare.py  smoke_offline_search.py  smoke_real_providers.py  smoke_user_flow.py  stress_search_switching.py  upgrade_search_indexes.py  validate_china_hk_index.py  validate_release_artifacts.py  validate_symbol_universe.py
tests/: conftest.py  test_bundled_runtime_packaging.py  test_china_hk_data_expansion.py  test_company_data_completeness.py  (+14 more)
(+135 files in other folders)
