[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "company-decision-monitor"
version = "0.1.3"
description = "Windows desktop app for monitoring major corporate decisions"
requires-python = ">=3.12"
readme = "README.md"

[project.optional-dependencies]
build-symbol-index = [
    "FinanceDatabase>=2.4,<3",
]
open-source-data = [
    "rapidfuzz>=3.14,<4",
    "cleanco>=2.3,<3",
]
china-hk-experimental = [
    "akshare",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q -p no:cacheprovider"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
plugins = []
mypy_path = "src"
ignore_missing_imports = true
warn_unused_ignores = false
warn_return_any = false
strict_optional = true
check_untyped_defs = true
